--- a/src/component/Loading/loading.less
+++ b/src/component/Loading/loading.less
@@ -16,7 +16,7 @@
         transform: translateX(-50%);
         color: #fff;
         left: 50%;
-        padding: 18px 27px;
+        padding: 36px 54px;
         overflow: hidden;
         border-radius: 4px;
         white-space: nowrap;
@@ -25,33 +25,33 @@
     }
     .loading {
         font-size: 0px;
-        padding: 27px 9px;
-        width: 226px;
+        padding: 20px 15px 30px;
+        width: 330px;
         overflow: hidden;
         display: flex;
         align-items: center;
         flex-direction: column;
         color: #f2f2f2;
         background: rgba(51, 51, 51, 0.94);
-        border-radius: 9px;
+        border-radius: 18px;
         text-align: center;
         .loading-icon {
             font-size: 0px;
-            margin-bottom: 18px;
+            margin-bottom: 16px;
             box-sizing: border-box;
-            width: 72px;
-            height: 72px;
+            width: 152px;
+            height: 152px;
             position: relative;
             span {
                 position: absolute;
                 height: 1px;
                 left: 50%;
                 top: 50%;
-                width: 18px;
+                width: 30px;
                 animation: loading-fade-light 1.1s infinite linear;
                 background: rgba(255, 255, 255, 0.3);
-                transform-origin: -18px 50%;
-                margin-left: 18px;
+                transform-origin: -30px 50%;
+                margin-left: 30px;
                 &:nth-child(1) {
                     animation-delay: 0s;
                     transform: rotate(0deg);
@@ -102,23 +102,25 @@
                 }
             }
             .wrapper {
-                width: 68px;
-                height: 68px;
+                width: 152px;
+                height: 152px;
+                 position: relative;
+                  display: flex;
+                 justify-content: center;
+                 align-items: center;
                 .spinner {
-                    position: absolute;
-                    height: 100%;
-                    width: 100%;
-                    left: 0;
-                    top: 0;
+                    height: 118px;
+                    width: 118px;
+                    transform-origin: 50%;
                     border-radius: 50%;
                     animation: loading-rotate .5s infinite linear;
-                    border: 4px solid #eee;
+                    border: 6px solid #eee;
                     border-color: rgb(255, 255, 255) rgb(153, 153, 153) rgb(153, 153, 153);
                 }
             }
         }
         .msg {
-            font-size: 26px;
+            font-size: 38px;
         }
     }
 }
