--- a/src/component/Transition/transition.css
+++ b/src/component/Transition/transition.css
@@ -82,37 +82,37 @@
 @-webkit-keyframes rodal-slideDown-enter {
     from {
         opacity: 0;
-        -webkit-transform: translate3d(0, -300px, 0);
-        transform: translate3d(0, -300px, 0);
+        -webkit-transform: translate3d(0, -100px, 0);
+        transform: translate3d(0, -100px, 0);
     }
 }
 
 @keyframes rodal-slideDown-enter {
     from {
         opacity: 0;
-        -webkit-transform: translate3d(0, -300px, 0);
-        transform: translate3d(0, -300px, 0);
+        -webkit-transform: translate3d(0, -100px, 0);
+        transform: translate3d(0, -100px, 0);
     }
 }
 
 .rodal-slideDown-enter {
-    -webkit-animation: rodal-slideDown-enter .4s both cubic-bezier(0.4, 0, 0, 1.5);
-    animation: rodal-slideDown-enter .4s both cubic-bezier(0.4, 0, 0, 1.5);
+    -webkit-animation: rodal-slideDown-enter 0.4s both cubic-bezier(0.4, 0, 0, 1.5);
+    animation: rodal-slideDown-enter 0.4s both cubic-bezier(0.4, 0, 0, 1.5);
 }
 
 @-webkit-keyframes rodal-slideDown-leave {
     to {
         opacity: 0;
-        -webkit-transform: translate3d(0, -300px, 0);
-        transform: translate3d(0, -300px, 0);
+        -webkit-transform: translate3d(0, -100px, 0);
+        transform: translate3d(0, -100px, 0);
     }
 }
 
 @keyframes rodal-slideDown-leave {
     to {
         opacity: 0;
-        -webkit-transform: translate3d(0, -300px, 0);
-        transform: translate3d(0, -300px, 0);
+        -webkit-transform: translate3d(0, -100px, 0);
+        transform: translate3d(0, -100px, 0);
     }
 }
 
@@ -125,16 +125,16 @@
 @-webkit-keyframes rodal-slideLeft-enter {
     from {
         opacity: 0;
-        -webkit-transform: translate3d(-450px, 0, 0);
-        transform: translate3d(-450px, 0, 0);
+        -webkit-transform: translate3d(-150px, 0, 0);
+        transform: translate3d(-150px, 0, 0);
     }
 }
 
 @keyframes rodal-slideLeft-enter {
     from {
         opacity: 0;
-        -webkit-transform: translate3d(-450px, 0, 0);
-        transform: translate3d(-450px, 0, 0);
+        -webkit-transform: translate3d(-150px, 0, 0);
+        transform: translate3d(-150px, 0, 0);
     }
 }
 
@@ -146,16 +146,16 @@
 @-webkit-keyframes rodal-slideLeft-leave {
     to {
         opacity: 0;
-        -webkit-transform: translate3d(-450px, 0, 0);
-        transform: translate3d(-450px, 0, 0);
+        -webkit-transform: translate3d(-150px, 0, 0);
+        transform: translate3d(-150px, 0, 0);
     }
 }
 
 @keyframes rodal-slideLeft-leave {
     to {
         opacity: 0;
-        -webkit-transform: translate3d(-450px, 0, 0);
-        transform: translate3d(-450px, 0, 0);
+        -webkit-transform: translate3d(-150px, 0, 0);
+        transform: translate3d(-150px, 0, 0);
     }
 }
 
@@ -168,16 +168,16 @@
 @-webkit-keyframes rodal-slideRight-enter {
     from {
         opacity: 0;
-        -webkit-transform: translate3d(450px, 0, 0);
-        transform: translate3d(450px, 0, 0);
+        -webkit-transform: translate3d(150px, 0, 0);
+        transform: translate3d(150px, 0, 0);
     }
 }
 
 @keyframes rodal-slideRight-enter {
     from {
         opacity: 0;
-        -webkit-transform: translate3d(450px, 0, 0);
-        transform: translate3d(450px, 0, 0);
+        -webkit-transform: translate3d(150px, 0, 0);
+        transform: translate3d(150px, 0, 0);
     }
 }
 
@@ -189,16 +189,16 @@
 @-webkit-keyframes rodal-slideRight-leave {
     to {
         opacity: 0;
-        -webkit-transform: translate3d(450px, 0, 0);
-        transform: translate3d(450px, 0, 0);
+        -webkit-transform: translate3d(150px, 0, 0);
+        transform: translate3d(150px, 0, 0);
     }
 }
 
 @keyframes rodal-slideRight-leave {
     to {
         opacity: 0;
-        -webkit-transform: translate3d(450px, 0, 0);
-        transform: translate3d(450px, 0, 0);
+        -webkit-transform: translate3d(150px, 0, 0);
+        transform: translate3d(150px, 0, 0);
     }
 }
 
@@ -211,16 +211,16 @@
 @-webkit-keyframes rodal-slideUp-enter {
     from {
         opacity: 0;
-        -webkit-transform: translate3d(0, 300px, 0);
-        transform: translate3d(0, 300px, 0);
+        -webkit-transform: translate3d(0, 100px, 0);
+        transform: translate3d(0, 100px, 0);
     }
 }
 
 @keyframes rodal-slideUp-enter {
     from {
         opacity: 0;
-        -webkit-transform: translate3d(0, 300px, 0);
-        transform: translate3d(0, 300px, 0);
+        -webkit-transform: translate3d(0, 100px, 0);
+        transform: translate3d(0, 100px, 0);
     }
 }
 
@@ -232,16 +232,16 @@
 @-webkit-keyframes rodal-slideUp-leave {
     to {
         opacity: 0;
-        -webkit-transform: translate3d(0, 300px, 0);
-        transform: translate3d(0, 300px, 0);
+        -webkit-transform: translate3d(0, 100px, 0);
+        transform: translate3d(0, 100px, 0);
     }
 }
 
 @keyframes rodal-slideUp-leave {
     to {
         opacity: 0;
-        -webkit-transform: translate3d(0, 300px, 0);
-        transform: translate3d(0, 300px, 0);
+        -webkit-transform: translate3d(0, 100px, 0);
+        transform: translate3d(0, 100px, 0);
     }
 }
 
